# sandbox

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
assets/: tree.mtl
core/: Actor.cpp  Actor.h  Component.cpp  Component.h  Game.cpp  Game.h  InputSystem.cpp  InputSystem.h  Material.cpp  Material.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  ShaderBuilder.cpp  ShaderBuilder.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  consts.h
core/actors/: FPSActor.cpp  FPSActor.h
core/components/: CameraComponent.cpp  CameraComponent.h  FPSCamera.cpp  FPSCamera.h  MeshComponent.cpp  MeshComponent.h  MoveComponent.cpp  MoveComponent.h
core/system/: ObjectManager.cpp  ObjectManager.h
core/utils/: MeshLoader.cpp  MeshLoader.h
shaders/: basicMesh.fragment  basicMesh.vertex
